Check if |lastProfile| is a guest profile when execute menu Items.

When user picks a menu item without key window, show UserManager if
the |lastProfile| is a guest profile and guest mode is disabled.

Bug: 820649
Change-Id: I6e20446de0b89a25e37c4d8aaa48a943878fd0c8
Reviewed-on: https://chromium-review.googlesource.com/959627
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Owen Min <zmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542936}
Former-commit-id: 027059d89aa2c92dccb867acd5aa5bd83cf9084d