chrome/browser/app_controller_mac.mm
@@ -1044,10 +1044,14 @@ static base::mac::ScopedObjCClassSwizzler* g_swizzle_imk_input_session;
   NSInteger tag = [sender tag];
 
   // If there are no browser windows, and we are trying to open a browser
-  // for a locked profile or the system profile, we have to show the User
-  // Manager instead as the locked profile needs authentication and the system
-  // profile cannot have a browser.
-  if (IsProfileSignedOut(lastProfile) || lastProfile->IsSystemProfile()) {
+  // for a locked profile or the system profile or the guest profile but
+  // guest mode is disabled, we have to show the User Manager instead as the
+  // locked profile needs authentication and the system profile cannot have a
+  // browser.
+  const PrefService* prefService = g_browser_process->local_state();
+  if (IsProfileSignedOut(lastProfile) || lastProfile->IsSystemProfile() ||
+      (lastProfile->IsGuestSession() && prefService &&
+       !prefService->GetBoolean(prefs::kBrowserGuestModeEnabled))) {
     UserManager::Show(base::FilePath(),
                       profiles::USER_MANAGER_SELECT_PROFILE_NO_ACTION);
     return;
